Update icon paths in wlogout style.css to reflect user directory changes

--- a/modules/user/wlogout/style.css
+++ b/modules/user/wlogout/style.css
@@ -26,25 +26,25 @@ button:focus, button:active, button:hover {
 }
 
 #lock {
-    background-image: image(url("/home/mz/.nix-profile/share/wlogout/icons/lock.png"));
+    background-image: image(url("/home/dokja/.nix-profile/share/wlogout/icons/lock.png"));
 }
 
 #logout {
-    background-image: image(url("/home/mz/.nix-profile/share/wlogout/icons/logout.png"));
+    background-image: image(url("/home/dokja/.nix-profile/share/wlogout/icons/logout.png"));
 }
 
 #suspend {
-    background-image: image(url("/home/mz/.nix-profile/share/wlogout/icons/suspend.png"));
+    background-image: image(url("/home/dokja/.nix-profile/share/wlogout/icons/suspend.png"));
 }
 
 #hibernate {
-    background-image: image(url("/home/mz/.nix-profile/share/wlogout/icons/hibernate.png"));
+    background-image: image(url("/home/dokja/.nix-profile/share/wlogout/icons/hibernate.png"));
 }
 
 #shutdown {
-    background-image: image(url("/home/mz/.nix-profile/share/wlogout/icons/shutdown.png"));
+    background-image: image(url("/home/dokja/.nix-profile/share/wlogout/icons/shutdown.png"));
 }
 
 #reboot {
-    background-image: image(url("/home/mz/.nix-profile/share/wlogout/icons/reboot.png"));
+    background-image: image(url("/home/dokja/.nix-profile/share/wlogout/icons/reboot.png"));
 }
